# ts-internal-joel-interview-questions

./: .gitignore  main-joel.py  main.py  pyproject.toml  results.py  run.sh  stage1-test.py  stage2-test.py  stage3-test.py
data/: transactions1.json  transactions2.json  transactions3.json  transactions4.json
